[package]
name = "http3support"
version = "0.1.0"
authors = ["Asur <asur@asurbernardo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "1.0.3", features = ["ssl"] }
actix-files = "0.1.7"
openssl = "0.10"
serde = "1.0.71"
serde_derive = "1.0.71"
cached = "0.10"