[package]
name = "http3support"
version = "0.1.0"
authors = ["Asur <asur@asurbernardo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "1.0.9", features = ["rust-tls"] }
actix-files = "0.1.7"
rustls = "0.15.2"
serde = "1.0.71"
serde_derive = "1.0.71"
serde_json = "1.0.16"
validator = "0.6.3"
validator_derive = "0.6.5"
cached = "0.10"
futures = "0.1"